# the-guide

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  FRONTEND_PLAN.md  PYTHON_MIGRATION_TODO.md  README.md  TASKS.md  TODO.md  demo.db-shm  demo.db-wal  docker-compose.yml  prompt.txt  pyproject.toml  smoke_test.db
.claude/: settings.local.json
.claude/agents/: dnd-pipeline-engineer.md  dnd5e-systems-engineer.md  partner-dm-narrator.md  python-backend-architect.md  rust-backend-architect.md
crates/guide-api/: Cargo.toml
crates/guide-api/src/: error.rs  main.rs  state.rs
crates/guide-api/src/routes/: campaigns.rs  characters.rs  chat.rs  documents.rs  encounters.rs  generate.rs  global_documents.rs  health.rs  mod.rs  openapi.rs  sessions.rs
crates/guide-api/tests/: api_tests.rs
crates/guide-combat/: Cargo.toml
crates/guide-combat/src/: initiative.rs  lib.rs
crates/guide-combat/tests/: combat_tests.rs
crates/guide-core/: Cargo.toml
crates/guide-core/src/: config.rs  error.rs  lib.rs
crates/guide-core/src/models/: campaign.rs  character.rs  document.rs  encounter.rs  mod.rs  playstyle.rs  session.rs  shared.rs
crates/guide-db/: Cargo.toml
crates/guide-db/migrations/: 001_initial.sql  003_playstyle.sql  004_indexes.sql  005_playstyle_fk.sql  006_constraints.sql
crates/guide-db/src/: campaigns.rs  characters.rs  documents.rs  encounters.rs  lib.rs  qdrant.rs  sessions.rs
crates/guide-db/tests/: repository_tests.rs
crates/guide-llm/: Cargo.toml
crates/guide-llm/src/: client.rs  cloud.rs  lib.rs  ollama.rs  openai_cloud.rs  prompts.rs  router.rs
crates/guide-pdf/: Cargo.toml  build.rs
crates/guide-pdf/src/: chunker.rs  extractor.rs  lib.rs  pipeline.rs
crates/guide-pdf/tests/: chunker_tests.rs
data/: guide.db  guide.db-shm  guide.db-wal
data/indexes/112f0747-06a9-4ae0-80a2-14de73ab9051/: 2040fe0c-adc5-45c6-baa1-6864aeee82f4.json
data/manual_summaries/: dm_handbook_summary.txt  monster_manual_summary.txt  players_handbook_summary.txt
docker/: Dockerfile  docker-compose.yml
guide-frontend/: package.json
guide-frontend/src/: App.tsx  main.tsx
guide-frontend/src-tauri/: Cargo.toml  tauri.conf.json
guide-frontend/src-tauri/src/: main.rs
guide-frontend/src/api/: campaigns.ts  characters.ts  chat.ts  client.ts  documents.ts  encounters.ts  health.ts  sessions.ts  types.ts
guide-frontend/src/components/campaigns/: CampaignCard.tsx  CampaignForm.tsx  WorldStateEditor.tsx
guide-frontend/src/components/characters/: BackstoryPanel.tsx  CharacterCard.tsx  CharacterForm.tsx  CharacterList.tsx  ConditionBadge.tsx
guide-frontend/src/components/chat/: ChatPanel.tsx  MessageBubble.tsx  PerspectiveSelector.tsx
guide-frontend/src/components/common/: Badge.tsx  ConfirmButton.tsx  ErrorBanner.tsx  FormField.tsx  LoadingSpinner.tsx  Modal.tsx
guide-frontend/src/components/documents/: DocumentList.tsx  IngestButton.tsx  UploadForm.tsx
guide-frontend/src/components/encounters/: CombatTracker.tsx  EncounterCard.tsx  EncounterForm.tsx  EncounterList.tsx  GenerateEncounterPanel.tsx  ParticipantRow.tsx
guide-frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
guide-frontend/src/components/sessions/: SessionCard.tsx  SessionEventForm.tsx  SessionEventList.tsx  SessionForm.tsx  SessionList.tsx  SummaryView.tsx
guide-frontend/src/hooks/: useApi.ts  useCampaign.ts  useChat.ts
guide-frontend/src/pages/: CampaignDetailPage.tsx  CampaignsPage.tsx  CharacterDetailPage.tsx  CharactersPage.tsx  ChatPage.tsx  DocumentsPage.tsx  EncounterDetailPage.tsx  EncountersPage.tsx  GlobalDocumentsPage.tsx  HealthPage.tsx  NotFoundPage.tsx  SessionDetailPage.tsx  SessionsPage.tsx
scripts/: test_ingest.py  test_pipeline.py
src/guide/: config.py  errors.py  hardware.py
src/guide/api/: main.py  state.py
src/guide/api/routes/: campaigns.py  characters.py  chat.py  documents.py  encounters.py  generate.py  health.py  sessions.py
src/guide/combat/: __init__.py  engine.py  initiative.py
src/guide/db/: __init__.py  campaigns.py  characters.py  documents.py  encounters.py  playstyle.py  pool.py  sessions.py
src/guide/db/migrations/: 002_document_kind.sql
src/guide/llm/: __init__.py  client.py  cloud.py  ollama.py  prompts.py  router.py
src/guide/models/: __init__.py  campaign.py  character.py  document.py  encounter.py  playstyle.py  session.py  shared.py
src/guide/pdf/: extractor.py  pipeline.py
tests/: conftest.py  test_api.py  test_combat.py  test_meta_index.py  test_rag.py  test_repositories.py
