[package]
name = "guide-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "guide_api"
path = "src/lib.rs"

[[bin]]
name = "guide-api"
path = "src/main.rs"

[dependencies]
guide-core    = { workspace = true }
guide-llm     = { workspace = true }
guide-db      = { workspace = true }
guide-pdf     = { workspace = true }
guide-combat  = { workspace = true }

axum          = { workspace = true }
tower         = { workspace = true }
tower-http    = { workspace = true }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
dotenvy       = { workspace = true }
futures       = { workspace = true }
async-stream  = { workspace = true }

qdrant-client = { workspace = true }

utoipa        = { workspace = true }
utoipa-axum   = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
tokio       = { workspace = true }
sqlx        = { workspace = true }
async-trait = { workspace = true }
serde_json  = { workspace = true }
