[package]
name = "guide-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
guide-core = { workspace = true }
async-openai = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
