[package]
name = "guide-pdf"
version = "0.1.0"
edition = "2021"

[dependencies]
guide-core = { workspace = true }
guide-llm  = { workspace = true }
guide-db   = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
qdrant-client = { workspace = true }

# Optional: PDF → image rendering (requires native pdfium binary at runtime)
# pdfium-render = { version = "0.8", features = ["image"], optional = true }
